fix z-index issue

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -25,7 +25,7 @@ $sidebar-width: 300px;
   padding: 10px 20px;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
   -webkit-transition: background 0.3s ease;
   -moz-transition: background 0.3s ease;
   -ms-transition: background 0.3s ease;
