--- a/src/assets/scss/_objects.scss
+++ b/src/assets/scss/_objects.scss
@@ -4,7 +4,6 @@
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
   margin-top: 2px;
   position: absolute;
-  z-index: 1;
 }
 
 .background--super-dark{
